fix: multiline threading sometimes got covered

--- a/src/bullet_threading.scss
+++ b/src/bullet_threading.scss
@@ -38,7 +38,13 @@
 
 .block-content-wrapper {
   position: relative;
+  overflow-x: visible !important; /* Fixme: overflow? */
 }
+
+.block-content-wrapper > div:first-child {
+  overflow-x: auto;
+}
+
 
 .bullet-container {
   height: 14px !important;
